--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -25,7 +25,7 @@
 <meta name="robots" content="max-image-preview:large">
 
 <!-- Open Graph / Social preview -->
-<meta property="og:image" content='{{ "favicon.png" | absURL }}'>
+<meta property="og:image" content='{{ "favicon-512.png" | absURL }}'>
 <meta property="og:image:width" content="512">
 <meta property="og:image:height" content="512">
 <meta property="og:image:alt" content="{{ .Site.Params.brand_name }} logo">
@@ -39,11 +39,10 @@
 
 <meta property="og:type" content='{{ cond (or .IsHome .IsSection) "website" "article" }}'>
 
-<!-- Favicons (simple 1-file setup) -->
-<link rel="icon" type="image/png" href='{{ "favicon.png" | relURL }}'>
-{{ if (fileExists "static/favicon.ico") }}
-<link rel="icon" href='{{ "favicon.ico" | relURL }}' type="image/x-icon">
-{{ end }}
+
+<link rel="icon" href='{{ "favicon.svg" | relURL }}' type="image/svg+xml">
+<link rel="icon" type="image/png" sizes="32x32" href='{{ "favicon-32.png" | relURL }}'>
+
 
 <!-- Description -->
 {{ if .Params.description }}
