--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -27,8 +27,8 @@
 <!-- Open Graph / Social preview -->
 <meta property="og:image" content='{{ "images/logo/bear-logo-og.png" | absURL }}'>
 <meta property="og:image:secure_url" content='{{ "images/logo/bear-logo-og.png" | absURL }}'>
-<meta property="og:image:width" content="1200">   <!-- set to real width -->
-<meta property="og:image:height" content="630">   <!-- set to real height -->
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 <meta property="og:image:alt" content="{{ .Site.Params.brand_name }} logo">
 <meta property="og:title" content='{{ if .Params.seo_title }}{{ .Params.seo_title }}{{ else if .IsHome }}{{ with .Site.Params.home_seo_title }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}'>
 <meta property="og:site_name" content="{{ .Site.Title }}">
